fixed:&__content gap調整

--- a/scss/object/project/_question.scss
+++ b/scss/object/project/_question.scss
@@ -55,6 +55,6 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    gap: rem(20);
+    gap: rem(19);
   }
 }
